Fix button appearance on Firefox

--- a/components/automate-ui/src/app/page-components/profile/profile.component.scss
+++ b/components/automate-ui/src/app/page-components/profile/profile.component.scss
@@ -5,6 +5,7 @@ $dropdown-width: 196px;
 
 button {
   -webkit-appearance: none;
+  background: transparent;
   border: none;
   font-family: inherit;
   line-height: inherit;
